Work with jbdc